remove old styles from home

--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -12,6 +12,10 @@
   color: #999;
 }
 
+.Home .books {
+  margin-top: 75px;
+}
+
 .Home .books h4 {
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
